# ChangeLog for media-plugins/gst-plugins-gconf
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-gconf/ChangeLog,v 1.73 2010/07/03 01:35:25 leio Exp $

*gst-plugins-gconf-0.10.22 (03 Jul 2010)

  03 Jul 2010; Mart Raudsepp <leio@gentoo.org>
  +gst-plugins-gconf-0.10.22.ebuild:
  Version bump. No noteworthy changes.

  01 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  gst-plugins-gconf-0.10.21.ebuild:
  x86 stable, bug 324691

  27 Jun 2010; <nixnut@gentoo.org> gst-plugins-gconf-0.10.21.ebuild:
  ppc stable #324691

  24 Jun 2010; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-gconf-0.10.17.ebuild:
  Stable for HPPA (bug #308379).

  24 Jun 2010; Markos Chandras <hwoarang@gentoo.org>
  gst-plugins-gconf-0.10.21.ebuild:
  Stable on amd64 wrt bug #324691

  18 Apr 2010; <nixnut@gentoo.org> gst-plugins-gconf-0.10.17.ebuild:
  ppc stable #308379

  05 Apr 2010; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-gconf-0.10.17.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #308379

*gst-plugins-gconf-0.10.21 (05 Apr 2010)

  05 Apr 2010; Mart Raudsepp <leio@gentoo.org>
  -gst-plugins-gconf-0.10.14.ebuild, +gst-plugins-gconf-0.10.21.ebuild:
  Version bump to be in sync with the rest; no code changes

  24 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  gst-plugins-gconf-0.10.17.ebuild:
  stable x86, bug 308379

  19 Mar 2010; Pacho Ramos <pacho@gentoo.org>
  gst-plugins-gconf-0.10.17.ebuild:
  amd64 stable, bug 308379

  10 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  gst-plugins-gconf-0.10.17.ebuild:
  Transfer Prefix keywords

  05 Jan 2010; nixnut <nixnut@gentoo.org> gst-plugins-gconf-0.10.16.ebuild:
  ppc stable #290343

  29 Dec 2009; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-gconf-0.10.16.ebuild:
  ia64/sh/sparc stable wrt #290343

  29 Nov 2009; Tobias Klausmann <klausman@gentoo.org>
  gst-plugins-gconf-0.10.16.ebuild:
  Stable on alpha, bug #290343
