@@ -1,13 +1,13 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-gconf/Attic/gst-plugins-gconf-0.10.21.ebuild,v 1.4 2010/07/01 11:45:49 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-gconf/Attic/gst-plugins-gconf-0.10.21.ebuild,v 1.5 2010/07/20 16:54:26 jer Exp $
 
 GCONF_DEBUG=no
 
 inherit gnome2 gst-plugins-good gst-plugins10
 
 DESCRIPTION="GStreamer plugin for wrapping GConf audio/video settings"
-KEYWORDS="~alpha amd64 ~arm ~hppa ~ia64 ppc ~ppc64 ~sh ~sparc x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~x86-solaris"
+KEYWORDS="~alpha amd64 ~arm ~ia64 ppc ~ppc64 ~sh ~sparc x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~x86-solaris"
 IUSE=""
 
 DEPEND=">=gnome-base/gconf-2
