@@ -1,6 +1,11 @@
 # ChangeLog for media-plugins/gst-plugins-gconf
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-gconf/ChangeLog,v 1.73 2010/07/03 01:35:25 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-gconf/ChangeLog,v 1.74 2010/07/20 16:54:26 jer Exp $
+
+  20 Jul 2010; Jeroen Roovers <jer@gentoo.org>
+  gst-plugins-gconf-0.10.16.ebuild, gst-plugins-gconf-0.10.17.ebuild,
+  gst-plugins-gconf-0.10.21.ebuild, gst-plugins-gconf-0.10.22.ebuild:
+  Drop HPPA keywording (bug #324511).
 
 *gst-plugins-gconf-0.10.22 (03 Jul 2010)
 
